# coffee-4-adventure

./: .gitignore  Cargo.toml  LICENSE  README.md
coffee_api/: Cargo.toml
coffee_api/src/: error.rs  main.rs
coffee_api/src/db/: mod.rs
coffee_api/src/routes/: greens.rs  health.rs  mod.rs  products.rs  roasts.rs
coffee_api/src/tests/: greens.rs  mod.rs  products.rs  roasts.rs
coffee_shared/: Cargo.toml
coffee_shared/migrations/: 001_define_green_coffee.surql  002_define_roast.surql  003_define_product.surql
coffee_shared/src/: error.rs  lib.rs
coffee_shared/src/db/: mod.rs
coffee_shared/src/models/: green_coffee.rs  mod.rs  product.rs  roast.rs
coffee_web/: Cargo.toml
coffee_web/src/: main.rs
