[package]
name = "coffee_api"
version = "0.1.0"
edition = "2024"

[features]
test-db = ["coffee_shared/test-db"]

[dependencies]
coffee_shared = { path = "../coffee_shared" }

axum = "0.8.6"
# dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.114"
# surrealdb = "2.3.10"
# thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.6.6", features = ["cors"] }
# uuid = { version = "1.10.0", features = ["v4", "serde"] }

# faker_rand = "0.1.1"
# rand = "0.9.2"
chrono = "0.4.42"

[dev-dependencies]
hyper = { version = "1.5.1", features = ["full"] }