[package]
name = "coffee_api"
version = "0.1.0"
edition = "2024"

[features]
test-db = ["surrealdb/kv-mem"]

[dependencies]
coffee_shared = { path = "../coffee_shared" }
axum = "0.8.6"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.6.6", features = ["cors"] }
chrono = "0.4.42"
surrealdb = { version = "2.3.10", features = ["kv-mem"] }

[dev-dependencies]
hyper = { version = "1.5.1", features = ["full"] }