[package]
name = "coffee_shared"
version = "0.1.0"
edition = "2024"

[features]
test-db = ["surrealdb/kv-mem"]

[dependencies]
axum = "0.8.6"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.114"
surrealdb = { version = "2.3.10", features = ["kv-mem"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "fs"] }
chrono = "0.4.42"